--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,9 +1,5 @@
 steps:
  - name: maven:3-jdk-8
    entrypoint: mvn
-   args: ['clean', 'compile', 'jib:dockerBuild', 'jib:build', '-Dmaven.test.skip=true']
-
- - name: maven:3-jdk-8
-   entrypoint: mvn
-   args: ['compile', 'jib:dockerBuild', '-Dmaven.test.skip=true']
+   args: ['clean', 'compile', 'jib:build', '-Dmaven.test.skip=true']
 
