Added cloud build file

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,21 +1,16 @@
 steps:
 - name: gcr.io/cloud-builders/mvn
-  dir: /root
-  entrypoint: bash
-  args:
-  - -c
-  - # Links the Docker config to /root/.docker/config.json so that Jib picks it up.
-    # Note that this is only a temporary workaround.
-    # See https://github.com/GoogleContainerTools/jib/pull/1500.
-    |
-    mkdir .docker &&
-    ln -s /builder/home/.docker/config.json .docker/config.json
+  args: ['clean', 'compile', 'jib:build', '-Dmaven.test.skip=true', '-Ddocker.image.prefix=gcr.io/$PROJECT_ID']
   volumes:
   - name: user.home
     path: /root
 
 - name: gcr.io/cloud-builders/mvn
-  args: ['clean', 'compile', 'jib:build', '-Dmaven.test.skip=true', '-Ddocker.image.prefix=gcr.io/$PROJECT_ID']
-  volumes:
-  - name: user.home
-    path: /root
+  entrypoint: bash
+  args:
+  - -c
+  - |
+    export PATH=$$PATH:. &&
+    curl -fsSL https://github.com/GoogleCloudPlatform/docker-credential-gcr/releases/download/v1.5.0/docker-credential-gcr_linux_amd64-1.5.0.tar.gz | tar zxv &&
+    chmod +x docker-credential-gcr &&
+    mvn -B clean compile jib:build -Dmaven.test.skip=true -Ddocker.image.prefix=gcr.io/$PROJECT_ID
