--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>event-hub</groupId>
 	<artifactId>event-hub-schema</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>${version}</version>
 
 	<name>event-hub-schema</name>
 	<url>http://maven.apache.org</url>
@@ -45,7 +45,7 @@
 	</dependencies>
 	<properties>
 		<java.version>1.8</java.version>
-		<docker.image.prefix>gcr.io/${env.GOOGLE_CLOUD_PROJECT}</docker.image.prefix>
+		<!--<docker.image.prefix>gcr.io/${env.GOOGLE_CLOUD_PROJECT}</docker.image.prefix>-->
 	</properties>
 	<build>
 		<plugins>
