--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,3 +8,10 @@ steps:
     curl -fsSL https://github.com/GoogleCloudPlatform/docker-credential-gcr/releases/download/v1.5.0/docker-credential-gcr_linux_amd64-1.5.0.tar.gz | tar zxv &&
     chmod +x docker-credential-gcr &&
     mvn -B clean compile -Dversion=$BUILD_ID jib:build -Dmaven.test.skip=true -Ddocker.image.prefix=gcr.io/$PROJECT_ID
+  
+- name: 'gcr.io/$PROJECT_ID/helm'
+  args: ['upgrade', '--install', '--set', 'image.tag=$BUILD_ID', 'event-hub-schema', './helm']
+  env:
+  - 'CLOUDSDK_COMPUTE_ZONE=us-central1-c'
+  - 'CLOUDSDK_CONTAINER_CLUSTER=my-first-cluster-1'
+  - 'TILLERLESS=true'
