--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -16,6 +16,7 @@ spec:
         app: "{{.Values.nameOverride}}"
         tier: validator
         track: stable
+        namespace: "{{.Release.Namespace}}"
     spec:
       containers:
         - name: "{{.Values.nameOverride}}"
